# pyscitq

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: hello_goodbye_long.py  hello_goodbye_with_failures.py  helloworld.py  helloworld_multi.py  helloworld_multi_slow.py  metaphlan.py
src/pyscitq2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/scitq2/: __init__.py  __version__.py  biology.py  constants.py  grpc_client.py  language.py  param.py  recruit.py  runner.py  uri.py  workflow.py
src/scitq2/pb/: taskqueue_pb2.py  taskqueue_pb2_grpc.py
