[project]
name = "pyscitq2"
version = "0.1.3"
description = "Python DSL for defining scitq2 workflows"
authors = [{ name="Raynald de Lahondès" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "grpcio>=1.63.0",
    "grpcio-tools>=1.63.0"
]

[project.urls]
"Homepage" = "https://github.com/gmtsciencedev/pyscitq2"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

