[project]
name = "pyscitq2"
version = "0.3.2" # do not foget to update src/scitq2/__version__.py also (this is manual for now)
description = "Python DSL for defining scitq2 workflows"
authors = [{ name="Raynald de Lahondès" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "grpcio>=1.74.0",
    "grpcio-tools>=1.74.0"
]

[project.urls]
"Homepage" = "https://github.com/gmtsciencedev/pyscitq2"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

